<resources>
    <string name="app_name">UserAppDemop</string>
    <string name="add_new_user">Add new user</string>
    <string name="view_all_users">View all users</string>
    <string name="add_new_user_text">Type details below to add new user</string>
    <string name="hint_first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="info">info</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
</resources>
