<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_margin_text">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_user_text" />

    <ImageView
        android:id="@+id/picture"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/ic_icons8_image_file" />

    <EditText
        android:id="@+id/first_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_first_name" />

    <EditText
        android:id="@+id/second_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/second_name" />

    <EditText
        android:id="@+id/info_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|left"
        android:hint="@string/info"
        android:inputType="textMultiLine"
        android:minLines="4" />

    <Button
        style="@style/Widget.AppCompat.Button"
        android:id="@+id/add_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/add" />


</LinearLayout>